--- a/app-config.yaml
+++ b/app-config.yaml
@@ -57,12 +57,15 @@ proxy:
 # and an external cloud storage when deploying TechDocs for production use-case.
 # https://backstage.io/docs/features/techdocs/how-to-guides#how-to-migrate-from-techdocs-basic-to-recommended-deployment-approach
 techdocs:
-  builder: 'local' # Alternatives - 'external'
+  builder: 'external' # Alternatives - 'external'
   generator:
     runIn: 'docker' # Alternatives - 'local'
   publisher:
-    type: 'local' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
-
+    type: 'azureBlobStorage' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
+    azureBlobStorage:
+      containerName: 'container-backstagepoc'
+      accountName: ${TECHDOCS_AZURE_BLOB_STORAGE_ACCOUNT_NAME}
+      accountKey: ${TECHDOCS_AZURE_BLOB_STORAGE_ACCOUNT_KEY}
 auth:
   # see https://backstage.io/docs/auth/ to learn about auth providers
   providers: {}
