--- a/app-config.yaml
+++ b/app-config.yaml
@@ -60,6 +60,8 @@ techdocs:
   builder: 'local' # Alternatives - 'external'
   generator:
     runIn: 'docker' # Alternatives - 'local'
+    dockerImage: 'spotify/techdocs'
+
   publisher:
     type: 'azureBlobStorage' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
     azureBlobStorage:
