--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,5 +11,8 @@ metadata:
   #   backstage.io/techdocs-ref: dir:.
 spec:
   type: website
-  owner: john@example.com
   lifecycle: experimental
+  owner: user:guest
+
+
+
