--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,14 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  annotations:
-    backstage.io/techdocs-ref: dir:.
-  name: backstage
+  name: artist-lookup
   description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  annotations:
+    backstage.io/techdocs-ref: "https://csb1003200283316de5.blob.core.windows.net/container-backstagepoc"
+ 
+
 spec:
   type: website
   lifecycle: experimental
