--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
   # Example for optional annotations
   annotations:
   #   github.com/project-slug: backstage/backstage
-     backstage.io/techdocs-ref: "dir: /docs/index.md "
+     backstage.io/techdocs-ref: dir:.
 spec:
   type: website
   owner: john@example.com
