--- a/app-config.yaml
+++ b/app-config.yaml
@@ -99,6 +99,16 @@ catalog:
       rules:
         - allow: [User, Group]
 
+    - type: url
+      target: https://github.com/backstage/software-templates/blob/main/scaffolder-templates/react-ssr-template/template.yaml
+      rules:
+        - allow: [Template]
+
+
+    - type: file
+      target: template.yaml # Backstage will expect the file to be in packages/backend/template.yaml
+      
+
     ## Uncomment these lines to add more example data
     # - type: url
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
