--- a/backstage.yaml
+++ b/backstage.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: backstage
           image: lauraplaza/backstage:3.0.11
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 7007
