--- a/app-config.yaml
+++ b/app-config.yaml
@@ -113,6 +113,11 @@ catalog:
     - type: file
       target: template.yaml # Backstage will expect the file to be in packages/backend/template.yaml
    
+   - type: url
+      target: https://github.com/lauraplaza-babel/backstage2/catalog-info.yaml
+      rules:
+        - allow: [Component, Template]
+
       
 
     ## Uncomment these lines to add more example data
