--- a/app-config.yaml
+++ b/app-config.yaml
@@ -110,7 +110,7 @@ catalog:
       target: https://github.com/backstage/software-templates/blob/main/scaffolder-templates/react-ssr-template/template.yaml
 
     - type: file
-      target: template.yaml # Backstage will expect the file to be in packages/backend/template.yaml
+      target: ../../packages/backend/template.yaml # Backstage will expect the file to be in packages/backend/template.yaml
    
    - type: url
       target: https://github.com/lauraplaza-babel/backstage2/catalog-info.yaml
