--- a/app-config.yaml
+++ b/app-config.yaml
@@ -108,13 +108,12 @@ catalog:
 
     - type: url
       target: https://github.com/backstage/software-templates/blob/main/scaffolder-templates/react-ssr-template/template.yaml
+    
 
-    - type: file
-      target: ../../packages/backend/template.yaml # Backstage will expect the file to be in packages/backend/template.yaml
-   
    - type: url
       target: https://github.com/lauraplaza-babel/backstage2/catalog-info.yaml
-
+      rules:
+        - allow: [Component, Template]
 
       
 
