--- a/app-config.yaml
+++ b/app-config.yaml
@@ -107,9 +107,11 @@ catalog:
         - allow: [User, Group]
 
 
-    ## Uncomment these lines to add more example data
-    # - type: url
-    #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
+     - type: url
+       target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
+
+      - type: url
+       target: https://github.com/lauraplaza-babel/backstage2/blob/master/examples/template/template2.yaml
 
     ## Uncomment these lines to add an example org
     # - type: url
