--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -19,6 +19,9 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get install -y --no-install-recommends libsqlite3-dev python3 build-essential && \
     yarn config set python /usr/bin/python3
 
+RUN apt-get update && apt-get install -y python3 python3-pip
+RUN pip3 install mkdocs-techdocs-core==1.1.7
+
 # From here on we use the least-privileged `node` user to run the backend.
 USER node
 
@@ -45,6 +48,8 @@ COPY --chown=node:node packages/backend/dist/bundle.tar.gz catalog-info.yaml ./
 COPY --chown=node:node packages/backend/dist/bundle.tar.gz /examples/template/template2.yaml ./
 COPY --chown=node:node packages/backend/dist/bundle.tar.gz mkdocs.yml ./
 COPY --chown=node:node packages/backend/dist/bundle.tar.gz docs/* ./
+
+
 
 RUN tar xzf bundle.tar.gz && rm bundle.tar.gz
 
